--- a/demo.ipynb
+++ b/demo.ipynb
@@ -22,8 +22,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2148c1d7-c2f4-4df7-92e5-b1a0f433dc96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 2\n",
+    "y = 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "21221559-3a03-482e-8d21-52888d30d58a",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x+y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28504523-cab5-4f9c-ad6e-8920142b0688",
    "metadata": {},
    "outputs": [],
    "source": []
